samples/_failures_safe/1761478486_bc3f38_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c872fb74.c: In function ‘main’:
./samples/SAFE/__tmp_c872fb74.c:159:17: error: expected declaration or statement at end of input
  159 |                 } else {
      |                 ^
./samples/SAFE/__tmp_c872fb74.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c872fb74.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c872fb74.c:159:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_c872fb74.c:159:17: error: expected declaration or statement at end of input
